saint-lascivious.github.io: tweak footer icons
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/mono.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -403,43 +403,35 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="icon-email">
-                <icon class="material-icons">email</icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
-                Email
-              </span>
+            <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+              <icon class="material-icons">email</icon>
+            </a>
+            <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
+              Email
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn">
-              <span id="icon-discord">
-                <icon class="fa-brands fa-discord"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
-                Discord
-              </span>
+            <a href="https://discord.gg/NC7taVyn" id="icon-discord">
+              <icon class="fa-brands fa-discord"></icon>
+            </a>
+            <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
+              Discord
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious">
-              <span id="icon-github">
-                <icon class="fa-brands fa-github"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
-                GitHub
-              </span>
+            <a href="https://github.com/saint-lascivious" id="icon-github">
+              <icon class="fa-brands fa-github"></icon>
+            </a>
+            <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
+              GitHub
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="icon-reddit">
-                <icon class="fa-brands fa-reddit"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
-                Reddit
-              </span>
+            <a href="https://www.reddit.com/user/saint-lascivious" id="icon-reddit">
+              <icon class="fa-brands fa-reddit"></icon>
+            </a>
+            <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
+              Reddit
             </a>
           </li>
         </ul>
