saint-lascivious.github.io: fix farquaad tooltip
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   newsandupdates.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -421,7 +421,7 @@
                 <img src="resources/images/farquaad.jpg" width="756" height="480" alt="Some of you may die, but that is a sacrifice I am willing to make.">
               </picture>
               <picture class="mdl-tooltip mdl-tooltip--top" for="image-farquaad">
-                Some of you may die, but that is a sacrifice I am willing to make.
+                Top text: Some of you may die,<br>Bottom text: but that is a sacrifice I am willing to make.
               </picture>
             </div>
             <p>
