saint-lascivious.github.io: minor text tweak, ip6 tooltips
Changes to be committed:
 - modified:   .formatted/index.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   index.html
 - modified:   portsandprotocols.html

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -178,7 +178,7 @@
               This site is one of those things.
             </p>
             <p>
-              Take a look around, there's a navigational panel to your left and/or above (desktop and mobile layouts may differ), you may find something that interests you here.
+              Take a look around, there's a menu icon at the top left, and/or shortcuts in the header above (desktop and mobile/tablet layouts may differ), you may find something that interests you here.
             </p>
             <a href="pokedexoverdns.html" class="subterfuge" id="image-wurm">
               <picture class="light-mode-img">
