--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -199,7 +199,7 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                  <td><code>119.224.127.171</code><br><span id="alt-ipv6-1"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1"><code>::ffff:119.224.127.171</code></span></td>
+                  <td><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></td>
                   <td>TCP<br><code>53</code></td>
                 </tr>
                 <tr>
@@ -209,7 +209,7 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                  <td><code>119.224.127.171</code><br><span id="alt-ipv6-2"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2"><code>::ffff:119.224.127.171</code></span></td>
+                  <td><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></td>
                   <td>UDP<br><code>53</code></td>
                 </tr>
                 <tr>
