--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -180,6 +180,21 @@
             <p>
               Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
+            <ul>
+              <li><a href="portsandprotocols.html#encrypteddns"><span class="embiggen">#Encrypted DNS</span></a></li>
+              <li><a href="portsandprotocols.html#dnsoverhttps"><span class="embiggen">#HTTPS</span></a></li>
+              <li><a href="portsandprotocols.html#dnsoverhttp3"><span class="embiggen">#HTTP/3</span></a></li>
+              <li><a href="portsandprotocols.html#dnsovertls"><span class="embiggen">#TLS</span></a></li>
+              <li><a href="portsandprotocols.html#dnsoverquic"><span class="embiggen">#QUIC</span></a></li>
+            </ul>
+            <ul>
+              <li><a href="portsandprotocols.html#unencrypteddns"><span class="embiggen">#Unencrypted DNS</span></a></li>
+              <li><a href="portsandprotocols.html#dnsovertcp"><span class="embiggen">#TCP</span></a></li>
+              <li><a href="portsandprotocols.html#dnsoverudp"><span class="embiggen">#UDP</span></a></li>
+            </ul>
+            <p class="embiggen sainternet-subheader-centered" id="encrypteddns">
+              Encrypted DNS
+            </p>
             <div class="enlift rounded-corners shadow-boxing">
               <table>
                 <tr>
@@ -188,34 +203,46 @@
                   <th>Port</th>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttps">HTTPS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps">DNS over HTTPS</a></td>
                   <td><code>dns.sainternet.xyz</code></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3">HTTP/3</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3">DNS over HTTP/3</a></td>
                   <td><code>dns.sainternet.xyz</code></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                  <td><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></td>
-                  <td>TCP<br><code>53</code></td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertls">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertls">DNS over TLS</a></td>
                   <td><code>dns.sainternet.xyz</code></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                  <td><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></td>
-                  <td>UDP<br><code>53</code></td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquic">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps">DNS over QUIC</a></td>
                   <td><code>dns.sainternet.xyz</code></td>
                   <td>UDP<br><code>853</code></td>
+                </tr>
+              </table>
+            </div>
+            <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
+              Unencrypted DNS
+            </p>
+            <div class="enlift rounded-corners shadow-boxing">
+              <table>
+                <tr>
+                  <th>Type</th>
+                  <th>Address</th>
+                  <th>Port</th>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol" id="dnsovertcp">TCP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertcp">DNS over TCP</a></td>
+                  <td><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></td>
+                  <td>TCP<br><code>53</code></td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol" id="dnsoverudp">UDP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverudp">DNS over UDP</a></td>
+                  <td><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></td>
+                  <td>UDP<br><code>53</code></td>
                 </tr>
               </table>
             </div>
