saint-lascivious.github.io: enlift social icons in footer
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -292,7 +292,7 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
-              <icon class="material-icons">email</icon>
+              <icon class="enlift material-icons">email</icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
               Email
@@ -300,7 +300,7 @@
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn" id="icon-discord">
-              <icon class="fa-brands fa-discord"></icon>
+              <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
               Discord
@@ -308,7 +308,7 @@
           </li>
           <li>
             <a href="https://github.com/saint-lascivious" id="icon-github">
-              <icon class="fa-brands fa-github"></icon>
+              <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
               GitHub
@@ -316,7 +316,7 @@
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious" id="icon-reddit">
-              <icon class="fa-brands fa-reddit"></icon>
+              <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
               Reddit
