--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -398,7 +398,7 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
-              <icon class="material-icons">email</icon>
+              <icon class="enlift material-icons">email</icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
               Email
@@ -406,7 +406,7 @@
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn" id="icon-discord">
-              <icon class="fa-brands fa-discord"></icon>
+              <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
               Discord
@@ -414,7 +414,7 @@
           </li>
           <li>
             <a href="https://github.com/saint-lascivious" id="icon-github">
-              <icon class="fa-brands fa-github"></icon>
+              <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
               GitHub
@@ -422,7 +422,7 @@
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious" id="icon-reddit">
-              <icon class="fa-brands fa-reddit"></icon>
+              <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
               Reddit
