--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -641,7 +641,7 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
-              <icon class="material-icons">email</icon>
+              <icon class="enlift material-icons">email</icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
               Email
@@ -649,7 +649,7 @@
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn" id="icon-discord">
-              <icon class="fa-brands fa-discord"></icon>
+              <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
               Discord
@@ -657,7 +657,7 @@
           </li>
           <li>
             <a href="https://github.com/saint-lascivious" id="icon-github">
-              <icon class="fa-brands fa-github"></icon>
+              <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
               GitHub
@@ -665,7 +665,7 @@
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious" id="icon-reddit">
-              <icon class="fa-brands fa-reddit"></icon>
+              <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
               Reddit
