saint-lascivious.github.io: minor text edit in testsainternet
Changes to be committed:
 - modified:   .formatted/testsainternet.html
 - modified:   testsainternet.html

--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -193,7 +193,7 @@
               Example Sainternet test query using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>dig +short txt test.sainternet.xyz</pre>
+              <pre>dig +short txt test.sainternet.xyz @dns.sainternet.xyz</pre>
             </div>
             <p>
               Example Sainternet dig query:
@@ -307,7 +307,7 @@ example.org.    84557   IN      A       93.184.216.34
               Example Sainternet test query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>nslookup -type=txt test.sainternet.xyz</pre>
+              <pre>nslookup -type=txt test.sainternet.xyz dns.sainternet.xyz</pre>
             </div>
             <p>
               Example Sainternet nslookup query:
